infra/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bot2-app
  namespace: bot2
spec:
  type: ClusterIP
  selector:
    app: bot2-app
  ports:
    - port: 80
      targetPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: redis
  namespace: bot2
spec:
  type: ClusterIP
  selector:
    app: bot2-app
  ports:
    - port: 6379
      targetPort: 6379
---
apiVersion: v1
kind: Service
metadata:
  name: proxy
  namespace: bot2
spec:
  type: ClusterIP
  selector:
    app: bot2-app
  ports:
    - port: 8080
      targetPort: 8080
